[gd_scene load_steps=32 format=2]

[ext_resource path="res://game/units/player.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/magnet-animation/IMG_0030.PNG" type="Texture" id=2]
[ext_resource path="res://assets/sprites/magnet-animation/IMG_0026.PNG" type="Texture" id=3]
[ext_resource path="res://assets/sprites/magnet-animation/IMG_0022.PNG" type="Texture" id=4]
[ext_resource path="res://assets/sprites/magnet-animation/IMG_0031.PNG" type="Texture" id=5]
[ext_resource path="res://assets/sprites/magnet-animation/IMG_0029.PNG" type="Texture" id=6]
[ext_resource path="res://assets/sprites/magnet-animation/IMG_0023.PNG" type="Texture" id=7]
[ext_resource path="res://assets/sprites/magnet-animation/IMG_0024.PNG" type="Texture" id=8]
[ext_resource path="res://assets/sprites/player/magnet ship 4.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/magnet-animation/IMG_0025.PNG" type="Texture" id=10]
[ext_resource path="res://assets/sprites/magnet-animation/IMG_0027.PNG" type="Texture" id=11]
[ext_resource path="res://assets/sprites/magnet-animation/IMG_0028.PNG" type="Texture" id=12]
[ext_resource path="res://assets/sprites/health-bar.png" type="Texture" id=13]
[ext_resource path="res://game/units/MagnetArea2D.gd" type="Script" id=14]
[ext_resource path="res://assets/sprites/player/magnet ship 1.png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/player/magnet ship 2.png" type="Texture" id=16]
[ext_resource path="res://assets/sprites/player/magnet ship 5.png" type="Texture" id=17]
[ext_resource path="res://assets/sprites/player/magnet ship 6.png" type="Texture" id=18]
[ext_resource path="res://assets/sprites/player/magnet ship 3.png" type="Texture" id=19]
[ext_resource path="res://assets/sfx/Bullet-shoot.ogg" type="AudioStream" id=20]
[ext_resource path="res://assets/sfx/attached.wav" type="AudioStream" id=21]
[ext_resource path="res://assets/sfx/attached2.wav" type="AudioStream" id=22]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0.00564972, 0.884615 ), 0.0, 0.0395795, 0, 0, Vector2( 0.615819, 0.673077 ), -1.08734, -1.08734, 0, 0, Vector2( 1, 0.076923 ), -0.137994, 0.0, 0, 0 ]

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0.00564972, 0.278846 ), 0.0, 0.121566, 0, 0, Vector2( 1, 1 ), 0.385341, 0.0, 0, 0 ]

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0 ), 0.0, 0.770344, 0, 1, Vector2( 0.536723, 0.413461 ), 0.0, 0.0, 0, 0, Vector2( 0.99435, 0 ), -0.90349, 0.0, 1, 0 ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 19 ), ExtResource( 9 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=5]
radius = 40.0

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 683, 540 )

[sub_resource type="CircleShape2D" id=7]
resource_local_to_scene = true
radius = 200.0

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 3 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 17.0
} ]

[sub_resource type="CircleShape2D" id=9]
resource_local_to_scene = true
radius = 56.0

[node name="player" type="KinematicBody2D"]
script = ExtResource( 1 )
red_channel_hp_modulate = SubResource( 1 )
green_channel_hp_modulate = SubResource( 2 )
blue_channel_hp_modulate = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
frame = 4
speed_scale = 3.0
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -15 )
shape = SubResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_bottom = 540
smoothing_enabled = true

[node name="CameraArea2D" type="Area2D" parent="Camera2D"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/CameraArea2D"]
shape = SubResource( 6 )

[node name="hp_circle" type="Sprite" parent="."]
modulate = Color( 0.894118, 0.341176, 0.309804, 1 )
position = Vector2( 0, -15 )
texture = ExtResource( 13 )

[node name="MagnetArea2D" type="Area2D" parent="."]
script = ExtResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MagnetArea2D"]
position = Vector2( 0, 4.23785 )
shape = SubResource( 7 )

[node name="MagnetSprite" type="AnimatedSprite" parent="MagnetArea2D"]
visible = false
modulate = Color( 1, 1, 1, 0.254902 )
position = Vector2( -5.99317, 191.958 )
scale = Vector2( 1.80181, 1.87834 )
frames = SubResource( 8 )
frame = 1
offset = Vector2( 0, -100 )

[node name="AttachingSound" type="AudioStreamPlayer" parent="MagnetArea2D"]
stream = ExtResource( 22 )

[node name="AttachedSound" type="AudioStreamPlayer" parent="MagnetArea2D"]
stream = ExtResource( 21 )

[node name="AttachArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttachArea2D"]
position = Vector2( 0, -15 )
shape = SubResource( 9 )

[node name="Label" type="Label" parent="."]
margin_left = -23.799
margin_top = 73.5391
margin_right = 16.201
margin_bottom = 87.5391
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )

[connection signal="body_entered" from="MagnetArea2D" to="MagnetArea2D" method="_on_MagnetArea2D_body_entered"]
[connection signal="body_exited" from="MagnetArea2D" to="MagnetArea2D" method="_on_MagnetArea2D_body_exited"]
[connection signal="body_entered" from="AttachArea2D" to="." method="_on_Area2D_body_entered"]
